# Auto-PR-Review-Assistant

./: .env.example  Makefile  README.md  pytest.ini
.github/workflows/: publish.yml
.pr_review/: config.json
cli/: README.md  cli.py  pyproject.toml  requirements.txt
cli/pr_review_cli/: cli.py
cli/pr_review_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
infrastructure/: .env.example  docker-compose.yml  github-actions.yml
services/review-engine/: engine.py  requirements.txt  test.py
services/review-engine/functions/: generate_review.py  post_comments.py
services/review_engine/: Dockerfile  auth.py  debug.py  engine.py  requirements.txt
services/review_engine/functions/: generate_review.py  post_comments.py
services/webhook-listener/: .env.example  debug_redis.py  main.py  requirements.txt
services/webhook_listener/: Dockerfile  README.md  main.py  requirements.txt
services/webhook_listener/query_api/: routes.py
tests/services_tests/: test_review_engine.py  test_webhook_listener.py
