[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-review-cli"
version = "0.1.0"
description = "A CLI dashboard for managing PR review history and rechecks"
authors = [
  { name="Ahmed Sulaimon", email="sulaimonahmed10@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
pr-review = "pr_review_cli.cli:main"

